--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kudipay_frontend",
+  "name": "terifi_frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^6.17.0",
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.90.2",
+    "@wagmi/core": "^2.12.1",
+    "framer-motion": "^12.23.22",
+    "lucide-react": "^0.545.0",
+    "next": "15.5.4",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "viem": "^2.23.1",
+    "wagmi": "^2.12.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
